bucket_C5/gpgme
# Buildsheet autogenerated by ravenadm tool -- Do not edit.

NAMEBASE=		gpgme
VERSION=		1.10.0
KEYWORDS=		security
VARIANTS=		standard
SDESC[standard]=	GnuPG Made Easy - high level crypto API
HOMEPAGE=		https://www.gnupg.org/related_software/gpgme/
CONTACT=		nobody

DOWNLOAD_GROUPS=	main
SITES[main]=		GNUPG/gpgme
DISTFILE[1]=		gpgme-1.10.0.tar.bz2:main
DF_INDEX=		1
SPKGS[standard]=	complete
			primary
			cpp

OPTIONS_AVAILABLE=	none
OPTIONS_STANDARD=	none

BUILDRUN_DEPENDS=	libgpg-error:single:standard
			libassuan:single:standard
			gnupg:primary:standard
EXRUN[cpp]=		gpgme:primary:standard

USES=			cpe gmake libtool shebangfix

LICENSE=		LGPL21+:primary
LICENSE_SCHEME=		solo
LICENSE_FILE=		LGPL21+:{{WRKSRC}}/COPYING.LESSOR

INFO=			primary:gpgme
CPE_VENDOR=		gnu
FPC_EQUIVALENT=		security/gpgme
INFO_SUBDIR=		.
SHEBANG_FILES=		tests/gpg/pinentry

MUST_CONFIGURE=		gnu
CONFIGURE_ARGS=		--enable-languages="cl cpp"
			--enable-fd-passing
			--disable-g13-test
			--disable-gpg-test
			--disable-gpgconf-test
			--disable-gpgsm-test

INSTALL_TARGET=		install-strip
INSTALL_REQ_TOOLCHAIN=	yes
SOVERSION=		11.19.0
PLIST_SUB=		CPP_SOMAJOR=6
			CPP_SOVERSION=6.5.0

post-patch:
	${REINPLACE_CMD} -e 's|^clfilesdir.*|clfilesdir=$$\(libdir\)/common-lisp/gpgme|g' \
		${WRKSRC}/lang/cl/Makefile.in

[FILE:254:descriptions/desc.primary]
GnuPG Made Easy (GPGME) is a C library designed to make access to GnuPG
easier for applications.  It provides a High-Level Crypto API for
encryption, decryption, signing, signature verification and key management.
Currently it uses GnuPG as its backend.


[FILE:50:descriptions/desc.cpp]
C++ bindings for GnuPG Made Easy (GPGME) library.


[FILE:99:distinfo]
1a8fed1197c3b99c35f403066bb344a26224d292afc048cfdfc4ccd5690a0693      1370162 gpgme-1.10.0.tar.bz2


[FILE:206:manifests/plist.primary]
bin/
 gpgme-config
 gpgme-tool
include/gpgme.h
lib/common-lisp/gpgme/
 gpgme-package.lisp
 gpgme.asd
 gpgme.lisp
lib/
 libgpgme.so
 libgpgme.so.%%SOMAJOR%%
 libgpgme.so.%%SOVERSION%%
share/aclocal/gpgme.m4


[FILE:933:manifests/plist.cpp]
include/gpgme++/
 configuration.h
 context.h
 data.h
 decryptionresult.h
 defaultassuantransaction.h
 editinteractor.h
 encryptionresult.h
 engineinfo.h
 error.h
 eventloopinteractor.h
 exception.h
 global.h
 gpgadduserideditinteractor.h
 gpgagentgetinfoassuantransaction.h
 gpggencardkeyinteractor.h
 gpgmefw.h
 gpgmepp_export.h
 gpgmepp_version.h
 gpgsetexpirytimeeditinteractor.h
 gpgsetownertrusteditinteractor.h
 gpgsignkeyeditinteractor.h
 importresult.h
include/gpgme++/interfaces/
 assuantransaction.h
 dataprovider.h
 passphraseprovider.h
 progressprovider.h
include/gpgme++/
 key.h
 keygenerationresult.h
 keylistresult.h
 notation.h
 result.h
 scdgetinfoassuantransaction.h
 signingresult.h
 swdbresult.h
 tofuinfo.h
 trustitem.h
 verificationresult.h
 vfsmountresult.h
lib/cmake/Gpgmepp/
 GpgmeppConfig.cmake
 GpgmeppConfigVersion.cmake
lib/
 libgpgmepp.so
 libgpgmepp.so.%%CPP_SOMAJOR%%
 libgpgmepp.so.%%CPP_SOVERSION%%


[FILE:555:patches/patch-lang_cpp_src_engineinfo.h]
In file included from qgpgmebackend.cpp:42:0:
../../../lang/cpp/src/engineinfo.h: In constructor 'GpgME::EngineInfo::Version::Version(const string&)':
../../../lang/cpp/src/engineinfo.h:47:17: error: 'sscanf' is not a member of 'std'
                 std::sscanf(version.c_str(), "%d.%d.%d", &major, &minor, &patch) != 3) {
                 ^


--- lang/cpp/src/engineinfo.h.orig	2017-10-04 15:17:16 UTC
+++ lang/cpp/src/engineinfo.h
@@ -32,6 +32,7 @@
 #include <algorithm>
 #include <string>
 #include <iostream>
+#include <cstdio>
 
 namespace GpgME
 {

